# sloth-core

./: README.md  dependencies.rosinstall
offboard_control/: CMakeLists.txt  package.xml
offboard_control/src/: offb_node.cpp
planner/: CMakeLists.txt  package.xml
planner/cfg/: inclined_perching_config.yaml  perching_config.yaml  timeofcontact_config.yaml  trajectory_config.yaml  vertical_perching_config.yaml  waypoints_cfg.yaml
planner/include/planner/: planner.h
planner/launch/: trajectory_config.rviz  waypoint_mission.launch
planner/src/: planner.cpp  planner_node.cpp
planner/srv/: GetTrajectory.srv
state_machine/: CMakeLists.txt  package.xml
state_machine/cfg/: waypoints_cfg.yaml
state_machine/include/state_machine/: state_machine.h
state_machine/launch/: flight_state_machine.launch  outdoor.launch  perching_state_machine.launch  px4_usb.launch  sim_state_machine.launch  state_machine.launch  timeofcontact.launch  vicon.launch  viz_state_machine.launch
state_machine/src/: state_machine.cpp  state_machine_node.cpp
tx2-setup/: extlinux.conf
