<?xml version="1.0"?>
<package format="2">
  <name>planner</name>
  <version>0.0.0</version>
  <description>Trajectory planning using mav_trajectory_generation</description>

  <maintainer email="batuhan.yumurtaci@tum.de">Batuhan Yumurtaci</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/yumurtaci</url>


  <buildtool_depend>catkin</buildtool_depend>
  

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>mav_planning_msgs</build_depend>
  <build_depend>mav_trajectory_generation</build_depend>
  <build_depend>mav_trajectory_generation_ros</build_depend>
  <build_depend>mav_visualization</build_depend>
  <build_depend>roslib</build_depend>  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>eigen_catkin</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>mav_planning_msgs</build_export_depend>
  <build_export_depend>mav_trajectory_generation</build_export_depend>
  <build_export_depend>mav_trajectory_generation_ros</build_export_depend>
  <build_export_depend>mav_visualization</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>mav_planning_msgs</exec_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>
  <exec_depend>mav_trajectory_generation_ros</exec_depend>
  <exec_depend>mav_visualization</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>

  </export>
</package>
